@@ -16,7 +16,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -34,7 +33,7 @@ public class BudgetService {
     public List<CategoryResponse> getCategories() {
         return Category.toList()
             .stream()
-            .map((c) -> new CategoryResponse(c.getCode(), c.getTitle()))
+            .map(category -> new CategoryResponse(category.getCode(), category.getTitle()))
             .toList();
     }
 
@@ -44,23 +43,25 @@ public class BudgetService {
         return BudgetResponse.getBudgetDetailList(budgets);
     }
 
-    /***
-     * DB 에서 {유저id, 년월, 카테고리}가 일치하는 예산들을 조회한다. Budget 조회 과정에서 기존 예산이 없다면 새 예산 생성해서 리스트에 포함한다.
+    /**
+     * DB 에서 {유저id, 년월, 카테고리}가 일치하는 예산들을 조회하고, 요청에 맞게 수정한다.
+     * Budget 조회 과정에서 기존 예산이 없다면 새 예산 생성해서 리스트에 포함한다.
      */
-    private List<Budget> getBudgets(CreateBudgetListRequest request, Long userId) {
-        List<Budget> budgets = request.getData().stream()
+    private List<Budget> getBudgets(CreateBudgetListRequest createBudgetListRequest, Long userId) {
+        return createBudgetListRequest.getData().stream()
             .map(d ->
                 {
                     //기존 예산 있다면 조회, 없다면 새 예산 생성
-                    Budget budget = findExistUser(userId, request.getYearMonth(), d.getCategory())
-                        .orElse(createNewBudget(userId, request.getYearMonth(), d.getCategory()));
+                    Budget budget = findExistUser(userId, createBudgetListRequest.getYearMonth(),
+                        d.getCategory())
+                        .orElse(createNewBudget(userId, createBudgetListRequest.getYearMonth(),
+                            d.getCategory()));
                     //업데이트
                     budget.updateBudgetAmount(d.getAmount());
                     return budget;
                 }
             )
-            .collect(Collectors.toList());
-        return budgets;
+            .toList();
     }
 
     private Optional<Budget> findExistUser(Long userId, YearMonth yearMonth, Category category) {
@@ -109,7 +110,7 @@ public class BudgetService {
             int ratio = (int) (((Long) r[1] * 100.0) / sumBudgetAmount);
             Category category = (Category) r[0];
             // 비중이 10% 미만인 카테고리는 기타로 포함
-            if (IsOtherRatios(ratio, category)) {
+            if (isOtherRatios(ratio, category)) {
                 continue;
             }
             //전체 중 10% 인 카테고리는 추천 리스트에 포함한다.
@@ -120,7 +121,7 @@ public class BudgetService {
         return ratioByCategory;
     }
 
-    private static boolean IsOtherRatios(int ratio, Category category) {
+    private static boolean isOtherRatios(int ratio, Category category) {
         return category == Category.MISCELLANEOUS || ratio < 10;
     }
 
@@ -130,18 +131,18 @@ public class BudgetService {
      */
     public Long getTotalAmountOfBudgetIn(YearMonth yearMonth, Long userId) {
         return getBudgetListOfAllCategoryListIn(yearMonth, userId).stream()
-            .mapToLong(x -> x.getBudgetAmount())
+            .mapToLong(Budget::getBudgetAmount)
             .sum();
     }
 
     /**
      * 유저의 해당 년월 예산 전부 반환
      */
-    private List<Budget> getBudgetListOfAllCategoryListIn(YearMonth this_month, Long userId)
+    private List<Budget> getBudgetListOfAllCategoryListIn(YearMonth yearMonth, Long userId)
         throws ApiException {
-        List<Budget> budgetList = budgetRepository.findByYearMonthAndUserId(this_month, userId);
+        List<Budget> budgetList = budgetRepository.findByYearMonthAndUserId(yearMonth, userId);
 
-        if (budgetList.size() == 0) {
+        if (budgetList.isEmpty()) {
             throw new ApiException(ExceptionEnum.NO_BUDGET_IN_THE_MONTH);
         }
         return budgetList;
@@ -150,10 +151,10 @@ public class BudgetService {
     /**
      * 유저의 해당 년월 예산 을 DTO로 변환한 뒤 전부 반환
      */
-    public List<BudgetResponse> getBudgetDtoListOfAllCategoryListIn(YearMonth this_month,
+    public List<BudgetResponse> getBudgetDtoListOfAllCategoryListIn(YearMonth yearMonth,
         Long userId) {
         return BudgetResponse.getBudgetDetailList(
-            getBudgetListOfAllCategoryListIn(this_month, userId));
+            getBudgetListOfAllCategoryListIn(yearMonth, userId));
     }
 
     public List<BudgetResponse> recommend(Long finalTodayExpenseProposal) {
